# virus-spreading-simulator

./: Automata.cpp  Automata.h  CMakeLists.txt  Correctness.cpp  Correctness.h  Mens.cpp  Mens.h  Simulatie.cpp  Simulatie.h  Statistiek.cpp  Statistiek.h  TODO.txt  Tools.h  UI.cpp  UI.h  Virus.cpp  Virus.h  Window.cpp  Window.h  World.cpp  World.h  json.hpp  main.cpp
Automata/Bert/: DFA.cpp  DFA.h  ENFA.cpp  ENFA.h  NFA.cpp  NFA.h  RE.cpp  RE.h  state.cpp  state.h
Automata/Frederic/: DFA.cpp  DFA.h  ENFA.cpp  ENFA.h  NFA.cpp  NFA.h  RE.cpp  RE.h
Automata/Working/: DFA.cpp  DFA.h  ENFA.cpp  ENFA.h  FA.cpp  FA.h  NFA.cpp  NFA.h  RE.cpp  RE.h
Documenten/: Virus Spreading Simulator.pptx  contract.xlsx
Input/: 0TableFillingDFA.json
Input/Virus/: virus1.json
Input/World/: world1.json
Output/: asymptomatischB.json  besmettingsgraad%.json  incubatieB.json  incubatietijdN.json  mutatie%.json  mutatieR.json  sterftegraad%.json  virus0.json  virus02DFA.json  virus1.json  virus12DFA.json  virus2.json  virus22DFA.json  virus3.json  virus32DFA.json  virus4.json  virus42DFA.json  virus5.json  virus52DFA.json  virus6.json  virus62DFA.json  ziekte%.json
Output/Correctness/: commaKey.json  integerValue.json  integersKey.json  percentageKey.json  percentageValue.json  questionKey.json  questionValue.json  rangeKey.json  rangeValue.json  validVirus.json  validWorld.json
Output/Virus/: asymptomatisch?.json  besmettelijk.json  incubatie?.json  incubatietijdN.json  infectieN.json  mutatie%.json  mutatieR.json  recoveryN.json  sterftegraad%.json  ziekte%.json
